--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -21,8 +21,7 @@
     },
     "colab": {
       "name": "P4M Notebook 3.ipynb",
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     }
   },
   "cells": [
@@ -84,11 +83,11 @@
         "is_prime(10001)"
       ],
       "metadata": {
-        "id": "GBw_shAafpEi",
-        "outputId": "7d91d5e6-701d-47ea-a6a9-80cd488c50a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GBw_shAafpEi",
+        "outputId": "7d91d5e6-701d-47ea-a6a9-80cd488c50a7"
       },
       "execution_count": 5,
       "outputs": [
@@ -146,10 +145,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "n8VNDo3Ro1Nh",
-        "outputId": "dca3a7cf-d4be-4743-8e81-d476e942ddc9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dca3a7cf-d4be-4743-8e81-d476e942ddc9"
       },
       "source": [
         "is_prime(10001)"
@@ -179,10 +178,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "EwsTzmDJo1Nh",
-        "outputId": "c4b3aa5e-f687-41e8-ffec-acba315dc8da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c4b3aa5e-f687-41e8-ffec-acba315dc8da"
       },
       "source": [
         "is_prime(101)"
@@ -243,10 +242,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "yky_CASQo1Ni",
-        "outputId": "021f5bbe-414c-4632-dd74-a59c5052f9cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "021f5bbe-414c-4632-dd74-a59c5052f9cb"
       },
       "source": [
         "sqrt(1000)"
@@ -297,10 +296,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "JCOkoqBJo1Nj",
-        "outputId": "059e2fda-41ab-4533-c732-d81f673ad9f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "059e2fda-41ab-4533-c732-d81f673ad9f4"
       },
       "source": [
         "math.sqrt(1000)"
@@ -323,11 +322,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "1wHHxCBvo1Nj",
-        "outputId": "97bec24e-78f3-4828-fe0c-eb42f4d072ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 164
-        }
+        },
+        "outputId": "97bec24e-78f3-4828-fe0c-eb42f4d072ab"
       },
       "source": [
         "factorial(10)  # This will cause an error!"
@@ -351,10 +350,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "q3_f65bdo1Nj",
-        "outputId": "0d4069e6-77c5-45e5-d308-90cfd13189ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0d4069e6-77c5-45e5-d308-90cfd13189ee"
       },
       "source": [
         "math.factorial(10)  # This is ok, since the math package comes with a function called factorial."
@@ -431,10 +430,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "MYRn_kwAo1Nk",
-        "outputId": "706d52e6-9060-4c88-9f0c-3f42de7520e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "706d52e6-9060-4c88-9f0c-3f42de7520e4"
       },
       "source": [
         "is_prime_fast(1000003)"
@@ -457,10 +456,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "CycTNs3Yo1Nk",
-        "outputId": "2489948e-6b86-4ce5-9d74-aee6e55ab7a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2489948e-6b86-4ce5-9d74-aee6e55ab7a4"
       },
       "source": [
         "is_prime_slow(1000003)"
@@ -509,10 +508,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "9362eqX8o1Nk",
-        "outputId": "884a8e04-3797-430f-8f2a-3b4825f52a31",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "884a8e04-3797-430f-8f2a-3b4825f52a31"
       },
       "source": [
         "%timeit is_prime_fast(1000003)"
@@ -532,10 +531,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "GlQqgs6Fo1Nk",
-        "outputId": "ac3bdead-e4df-4420-8245-4c290ee02e11",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ac3bdead-e4df-4420-8245-4c290ee02e11"
       },
       "source": [
         "%timeit is_prime_slow(1000003)"
@@ -555,10 +554,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "MMoNyEsOo1Nk",
-        "outputId": "5dbe8d50-cd73-44a3-9f23-4adb22b88768",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5dbe8d50-cd73-44a3-9f23-4adb22b88768"
       },
       "source": [
         "%timeit is_prime(1000003)"
@@ -587,10 +586,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "hPOknCuUo1Nk",
-        "outputId": "2fb96ff4-e9f6-4e53-9d50-7c226b291bec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2fb96ff4-e9f6-4e53-9d50-7c226b291bec"
       },
       "source": [
         "is_prime_fast(10000000000037)  # Don't try this with `is_prime` unless you want to wait for a long time!"
@@ -634,41 +633,162 @@
       "source": [
         "from dis import dis"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wQX1FSObo1Nl"
+        "id": "wQX1FSObo1Nl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3fc4c3b3-0a61-40c8-d9dc-29cb0a8cdab1"
       },
       "source": [
         "dis(is_prime_fast)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  6           0 LOAD_CONST               1 (2)\n",
+            "              2 STORE_FAST               1 (j)\n",
+            "\n",
+            "  7           4 LOAD_GLOBAL              0 (sqrt)\n",
+            "              6 LOAD_FAST                0 (n)\n",
+            "              8 CALL_FUNCTION            1\n",
+            "             10 STORE_FAST               2 (root_n)\n",
+            "\n",
+            "  8     >>   12 LOAD_FAST                1 (j)\n",
+            "             14 LOAD_FAST                2 (root_n)\n",
+            "             16 COMPARE_OP               1 (<=)\n",
+            "             18 POP_JUMP_IF_FALSE       62\n",
+            "\n",
+            "  9          20 LOAD_FAST                0 (n)\n",
+            "             22 LOAD_FAST                1 (j)\n",
+            "             24 BINARY_MODULO\n",
+            "             26 LOAD_CONST               2 (0)\n",
+            "             28 COMPARE_OP               2 (==)\n",
+            "             30 POP_JUMP_IF_FALSE       52\n",
+            "\n",
+            " 10          32 LOAD_GLOBAL              1 (print)\n",
+            "             34 LOAD_CONST               3 ('{} is a factor of {}.')\n",
+            "             36 LOAD_METHOD              2 (format)\n",
+            "             38 LOAD_FAST                1 (j)\n",
+            "             40 LOAD_FAST                0 (n)\n",
+            "             42 CALL_METHOD              2\n",
+            "             44 CALL_FUNCTION            1\n",
+            "             46 POP_TOP\n",
+            "\n",
+            " 11          48 LOAD_CONST               4 (False)\n",
+            "             50 RETURN_VALUE\n",
+            "\n",
+            " 12     >>   52 LOAD_FAST                1 (j)\n",
+            "             54 LOAD_CONST               5 (1)\n",
+            "             56 BINARY_ADD\n",
+            "             58 STORE_FAST               1 (j)\n",
+            "             60 JUMP_ABSOLUTE           12\n",
+            "\n",
+            " 13     >>   62 LOAD_CONST               6 (True)\n",
+            "             64 RETURN_VALUE\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "M_T0805ko1Nl"
+        "id": "M_T0805ko1Nl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "77c97fbc-4ef9-4d66-b9e3-a4030a358c03"
       },
       "source": [
         "dis(is_prime_slow)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  6           0 LOAD_CONST               1 (2)\n",
+            "              2 STORE_FAST               1 (j)\n",
+            "\n",
+            "  7     >>    4 LOAD_FAST                1 (j)\n",
+            "              6 LOAD_GLOBAL              0 (sqrt)\n",
+            "              8 LOAD_FAST                0 (n)\n",
+            "             10 CALL_FUNCTION            1\n",
+            "             12 COMPARE_OP               1 (<=)\n",
+            "             14 POP_JUMP_IF_FALSE       58\n",
+            "\n",
+            "  8          16 LOAD_FAST                0 (n)\n",
+            "             18 LOAD_FAST                1 (j)\n",
+            "             20 BINARY_MODULO\n",
+            "             22 LOAD_CONST               2 (0)\n",
+            "             24 COMPARE_OP               2 (==)\n",
+            "             26 POP_JUMP_IF_FALSE       48\n",
+            "\n",
+            "  9          28 LOAD_GLOBAL              1 (print)\n",
+            "             30 LOAD_CONST               3 ('{} is a factor of {}.')\n",
+            "             32 LOAD_METHOD              2 (format)\n",
+            "             34 LOAD_FAST                1 (j)\n",
+            "             36 LOAD_FAST                0 (n)\n",
+            "             38 CALL_METHOD              2\n",
+            "             40 CALL_FUNCTION            1\n",
+            "             42 POP_TOP\n",
+            "\n",
+            " 10          44 LOAD_CONST               4 (False)\n",
+            "             46 RETURN_VALUE\n",
+            "\n",
+            " 11     >>   48 LOAD_FAST                1 (j)\n",
+            "             50 LOAD_CONST               5 (1)\n",
+            "             52 BINARY_ADD\n",
+            "             54 STORE_FAST               1 (j)\n",
+            "             56 JUMP_ABSOLUTE            4\n",
+            "\n",
+            " 12     >>   58 LOAD_CONST               6 (True)\n",
+            "             60 RETURN_VALUE\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1mendW3Uo1Nl"
+        "id": "1mendW3Uo1Nl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8cdd20ca-0a68-4c64-f5a1-debe00aeff1b"
       },
       "source": [
         "is_prime_fast(10**14 + 37) # This might get a bit of delay."
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1858741 is a factor of 100000000000037.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -692,6 +812,29 @@
         "2.  Use the `%timeit` tool to study the speed of `is_prime_fast` for various sizes of `n`.  Using about 10 data points, relate the size of `n` to the time taken by the `is_prime_fast` function.\n",
         "\n",
         "3.  Write a function `is_square(n)` to test whether a given integer `n` is a perfect square (like 0, 1, 4, 9, 16, etc.).  How fast can you make it run?  Describe the different approaches you try and which are fastest."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"1. \")"
+      ],
+      "metadata": {
+        "id": "FI8SYIbptsIC",
+        "outputId": "fd500ffe-64a6-4cc9-8e7e-11e4515c2e6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1. \n"
+          ]
+        }
       ]
     },
     {
