--- a/Classwork_2_21_23.ipynb
+++ b/Classwork_2_21_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP27zsDBkSn7msubyi00C+G",
+      "authorship_tag": "ABX9TyPfwRi1gdoCqlEfTfnyRlBk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -133,7 +133,7 @@
       "source": [
         "###**Today we will start using a package called NumPy**\n",
         "\n",
-        "#####numpy (+ scipi) + PIL + matplotlib"
+        "#####numpy (+ scipi) + PIL (Python Imaging Library) + matplotlib"
       ],
       "metadata": {
         "id": "FFFiXmc4lKBr"
