--- a/Classwork_2_23_23.ipynb
+++ b/Classwork_2_23_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcqT9v3ICOvSTqQWsLNsL/",
+      "authorship_tag": "ABX9TyMjdaw6SvTCvipPxKY8RjGP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -458,6 +458,34 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Determinant\n",
+        "\n",
+        "det: {nxn matricies} → $\\mathbb{R}$\n",
+        "\n",
+        "(1) det of a diagonal matrix with elements [$\\lambda_0$, ..., $\\lambda_n$], the determinant is $\\lambda_0$$\\cdot$ ... $\\cdot$$\\lambda_n$.\n",
+        "\n",
+        "(2) switch rows/columns $\\implies$ det switch sign ($\\pm$).\n",
+        "\n",
+        "(3) add one row to another $\\implies$ det doesn't change."
+      ],
+      "metadata": {
+        "id": "I2Fdlks27SX5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Side note: \"computational linear algebra makes the world go round these days\" - Prof\n",
+        "\n",
+        "Google got its start by doing large matrix computations"
+      ],
+      "metadata": {
+        "id": "rYZG0-kJ9Ch3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "np.linalg.det(M) #useful property of det - allows you to know if the matrix is invertable"
@@ -480,6 +508,43 @@
           },
           "metadata": {},
           "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "M = np.random.choice([0,1], [100,100])"
+      ],
+      "metadata": {
+        "id": "f015eDNb8FNL"
+      },
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "M.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aZHT2VJT8KbH",
+        "outputId": "3f3d583b-7337-40b1-d88d-b9f80bbce5e3"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(100, 100)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
         }
       ]
     },
