--- a/P4M_Notebook_4.ipynb
+++ b/P4M_Notebook_4.ipynb
@@ -79,10 +79,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "PfPgOZNXG50D",
-        "outputId": "cf644e28-5715-4921-9fe7-5188dbcafc6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cf644e28-5715-4921-9fe7-5188dbcafc6d"
       },
       "source": [
         "np.sqrt(10)"
@@ -114,10 +114,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "q2hpV5uhG50E",
-        "outputId": "568fe6a3-d316-46f7-b646-19e6289bf4d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "568fe6a3-d316-46f7-b646-19e6289bf4d9"
       },
       "source": [
         "type(np.sqrt(10))"
@@ -157,11 +157,11 @@
         "#get size will yield different results between pyton default and numpy"
       ],
       "metadata": {
-        "id": "TupcBNTYAf45",
-        "outputId": "775c9078-bcd6-49f7-eb9c-feb45e552b62",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TupcBNTYAf45",
+        "outputId": "775c9078-bcd6-49f7-eb9c-feb45e552b62"
       },
       "execution_count": 19,
       "outputs": [
@@ -192,10 +192,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "WrlJojzPG50F",
-        "outputId": "658dd745-8f64-4483-f69e-8abde5c257bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "658dd745-8f64-4483-f69e-8abde5c257bf"
       },
       "source": [
         "print(x**10)"
@@ -215,10 +215,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "sMoTyrkjG50F",
-        "outputId": "6fdbc1f0-20b0-4841-9623-ca590086e70b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6fdbc1f0-20b0-4841-9623-ca590086e70b"
       },
       "source": [
         "type(x**10)"
@@ -253,11 +253,11 @@
         "np.arange(1,50)"
       ],
       "metadata": {
-        "id": "m2kqrosFBnBC",
-        "outputId": "f0a35b8b-7170-4c01-af0e-d970bcbbc0c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "m2kqrosFBnBC",
+        "outputId": "f0a35b8b-7170-4c01-af0e-d970bcbbc0c6"
       },
       "execution_count": 20,
       "outputs": [
@@ -281,11 +281,11 @@
         "np.arange(1,10,0.1)"
       ],
       "metadata": {
-        "id": "ZzWerZs1BqLk",
-        "outputId": "74c30784-389a-4b38-84aa-326d456e7f17",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZzWerZs1BqLk",
+        "outputId": "74c30784-389a-4b38-84aa-326d456e7f17"
       },
       "execution_count": 21,
       "outputs": [
@@ -313,11 +313,11 @@
         "np.linspace(1,10,7) #stops exactly at 10"
       ],
       "metadata": {
-        "id": "Q_vWntXDBtgj",
-        "outputId": "03d9dba9-facf-4b51-ad1c-d420c4c3b363",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q_vWntXDBtgj",
+        "outputId": "03d9dba9-facf-4b51-ad1c-d420c4c3b363"
       },
       "execution_count": 23,
       "outputs": [
@@ -381,11 +381,11 @@
         "type(n)"
       ],
       "metadata": {
-        "id": "ZWtcCG2SC3fu",
-        "outputId": "6dab7f4b-d03f-49fd-d8de-d1ada4fd4989",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZWtcCG2SC3fu",
+        "outputId": "6dab7f4b-d03f-49fd-d8de-d1ada4fd4989"
       },
       "execution_count": 29,
       "outputs": [
@@ -405,11 +405,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "P1iN1H9AG50F",
-        "outputId": "5c23e8be-8e2d-4228-8152-47014f79904c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "5c23e8be-8e2d-4228-8152-47014f79904c"
       },
       "source": [
         "bin(n) # The bits of n are in the string below, after the '0b'.  "
@@ -435,10 +435,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "6VxxehF2G50G",
-        "outputId": "a0710300-f61b-469f-8ab8-7387167bbf42",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a0710300-f61b-469f-8ab8-7387167bbf42"
       },
       "source": [
         "print(n)"
@@ -458,10 +458,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "xwiiYIZHG50G",
-        "outputId": "24aa1610-800a-455e-a6db-0bd19846be26",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "24aa1610-800a-455e-a6db-0bd19846be26"
       },
       "source": [
         "print(n*n) # Uh oh overflow."
@@ -500,10 +500,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "CGNI-a7DG50G",
-        "outputId": "bb7d111c-ea4e-4451-ce97-6278a5d2fa29",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bb7d111c-ea4e-4451-ce97-6278a5d2fa29"
       },
       "source": [
         "print(np.e)"
@@ -523,10 +523,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "QMvHz4nVG50G",
-        "outputId": "4242b1fa-eb11-4e8b-ab71-99f285e2455d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4242b1fa-eb11-4e8b-ab71-99f285e2455d"
       },
       "source": [
         "print(np.pi)"
@@ -546,10 +546,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Yx2vgQLSG50G",
-        "outputId": "f3f50aa6-69f8-465a-cadb-85f868bc1b07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f3f50aa6-69f8-465a-cadb-85f868bc1b07"
       },
       "source": [
         "print(np.euler_gamma) # The harmonic sum minus the logarithm, remember?"
@@ -577,57 +577,132 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oFz-Pg4aG50H"
+        "id": "oFz-Pg4aG50H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e60636c7-058a-432b-d46a-62433a150898"
       },
       "source": [
         "np.sin(np.pi / 4) # What will this be?  Remember precalculus?"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7071067811865475"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "U9wfP0R-G50H"
+        "id": "U9wfP0R-G50H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "27fd505c-b48f-4163-dc20-dc024a8851f0"
       },
       "source": [
         "np.sqrt(2) / 2 # For comparison.  Note the little deviation from above... these can add up!!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7071067811865476"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SAM1qy_iG50H"
+        "id": "SAM1qy_iG50H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4b1ad0dc-590c-4629-f8ff-f0498aaa18c4"
       },
       "source": [
         "np.arctan(1) # The arctangent, or inverse tangent function"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7853981633974483"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Rzxk9OWlG50H"
+        "id": "Rzxk9OWlG50H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "edbc1045-d26d-4e39-fb1a-0662af767b60"
       },
       "source": [
         "np.pi / 4"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7853981633974483"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9vw840QfG50H"
+        "id": "9vw840QfG50H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "28ab1008-c61e-41a3-f698-cdec888e87a2"
       },
       "source": [
         "np.hypot(3,4) # Guess what this does!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -645,25 +720,49 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "braipmb9G50I"
+        "id": "braipmb9G50I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9eddabf6-d23e-4a53-f87f-d95a81d6f5ea"
       },
       "source": [
         "L = np.array([1,2,3,4,5,6,7,8,9,10]) # Make a NumPy array from a list of numbers.\n",
         "print(L) # Looks like a list."
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 1  2  3  4  5  6  7  8  9 10]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bplXlKrSG50I"
+        "id": "bplXlKrSG50I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7fe9a2a3-ca7b-425f-ca85-074e83fdac63"
       },
       "source": [
         "print([1,2,3,4,5,6,7,8,9,10]) # But a Python list is printed with commas."
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
