--- a/P4M_Notebook_4.ipynb
+++ b/P4M_Notebook_4.ipynb
@@ -767,57 +767,123 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G8rpAI6VG50I"
+        "id": "G8rpAI6VG50I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8b44ffc2-3571-4c54-f386-c8bcc9068e14"
       },
       "source": [
         "print(L[0])  # NumPy arrays are indexed like plain-Python arrays.  Start at zero."
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-c82_FLbG50I"
+        "id": "-c82_FLbG50I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "147db16d-ea9c-474f-e889-8c155a0a05c6"
       },
       "source": [
         "print(L[-1]) # Familiar Python indexing tricks are supported."
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tynZI_jEG50I"
+        "id": "tynZI_jEG50I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "45b20dab-b089-42ae-d437-7a536c4768b2"
       },
       "source": [
         "type(L) # But really, L is not a list!  It's a numpy.ndarray"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AFopmu7mG50J"
+        "id": "AFopmu7mG50J",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ac2e0642-0217-44a6-d274-a70cdbf69160"
       },
       "source": [
         "type(L[0]) # NumPy is treating the terms with numpy types.  int64 is a 64-bit signed integer type."
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XJYk7ZdxG50J"
+        "id": "XJYk7ZdxG50J",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d932a1ec-917a-48e3-e206-02f08b65ac63"
       },
       "source": [
         "print(L[1::3]) # Python list slices are supported in NumPy arrays."
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2 5 8]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -833,46 +899,107 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PHaATagdG50J"
+        "id": "PHaATagdG50J",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6290f9f7-a319-4794-de3d-85ad11b9899d"
       },
       "source": [
         "L + L # What would this do for a list?"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 2,  4,  6,  8, 10, 12, 14, 16, 18, 20])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "km0mDD8qG50J"
+        "id": "km0mDD8qG50J",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dd312c40-610f-4680-8a0e-f66b2fd57688"
       },
       "source": [
         "7 * L # What would this do for a list?"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 7, 14, 21, 28, 35, 42, 49, 56, 63, 70])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3mf5wWzCG50J"
+        "id": "3mf5wWzCG50J",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3bdd6e8f-082f-48e1-f6c6-e5a663b45e30"
       },
       "source": [
         "L * L # What would this do for a list?"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  1,   4,   9,  16,  25,  36,  49,  64,  81, 100])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vkRj5WjBG50K"
+        "id": "vkRj5WjBG50K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "224a4d4f-7b67-4661-cf26-dc7bf461a5ab"
       },
       "source": [
         "np.sin(L) # What would this do for a list?"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0.84147098,  0.90929743,  0.14112001, -0.7568025 , -0.95892427,\n",
+              "       -0.2794155 ,  0.6569866 ,  0.98935825,  0.41211849, -0.54402111])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -888,28 +1015,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VzUACpuMG50K"
+        "id": "VzUACpuMG50K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d3e82812-e670-44a6-df2f-28dbbcd44aef"
       },
       "source": [
         "M = np.array([1,2.5,3])  # It looks like an int, float, and int.\n",
         "for m in M:\n",
         "    print(m,\" has type \",type(m)) # What do you think this will do?"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.0  has type  <class 'numpy.float64'>\n",
+            "2.5  has type  <class 'numpy.float64'>\n",
+            "3.0  has type  <class 'numpy.float64'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EnrygH9XG50K"
+        "id": "EnrygH9XG50K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2dc26060-5c68-44fe-d4e9-1c7feb31886e"
       },
       "source": [
         "N = [1, 2.5, 3]\n",
         "for n in N:\n",
         "    print(n, \"has type \",type(n)) # Plain Python lists are type-flexible."
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 has type  <class 'int'>\n",
+            "2.5 has type  <class 'float'>\n",
+            "3 has type  <class 'int'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -923,37 +1078,76 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YxkIMS5AG50K"
+        "id": "YxkIMS5AG50K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ae9fb78d-7484-4c93-fc60-a1720d49ab33"
       },
       "source": [
         "O = np.array([False, 2.5, 'Hello']) # NumPy has its own string type too.\n",
         "for o in O:\n",
         "    print(o, \"has type \",type(o))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False has type  <class 'numpy.str_'>\n",
+            "2.5 has type  <class 'numpy.str_'>\n",
+            "Hello has type  <class 'numpy.str_'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R_T6mGsrHhi2"
+        "id": "R_T6mGsrHhi2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c3808cd4-fd3d-403c-bbc7-7265c36ebea5"
       },
       "source": [
         "print(O) # Look at what numpy has done to O!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['False' '2.5' 'Hello']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-yClO2YYG50L"
+        "id": "-yClO2YYG50L",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3d287583-3685-4040-9717-df6659737d6a"
       },
       "source": [
         "P = np.array([1, [2,3]]) # NumPy will not be happy with this.  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-56-9fb7854545ca>:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+            "  P = np.array([1, [2,3]]) # NumPy will not be happy with this.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
